--- a/Bootloader/MDK-ARM/Bootloader.uvprojx
+++ b/Bootloader/MDK-ARM/Bootloader.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xB</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;..\Protocol;..\Utils;..\Drivers\uart;..\Drivers\flash;..\App;..\Board</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../Protocol;../Utils;../Drivers/uart;../Drivers/flash;../App;../Board</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
